deploy/kubernetes/base/deploy.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: go-gen
  labels:
    app: go-gen
    version: v1
spec:
  minReadySeconds: 1
  selector:
    matchLabels:
      app: go-gen
      version: v1
  template:
    metadata:
      labels:
        app: go-gen
        version: v1
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: docker-secret
      containers:
      - imagePullPolicy: Always
        name: go-gen
        image: go-gen
        resources:
          requests:
            cpu: 20m
            memory: 50Mi
          limits:
            cpu: 200m
            memory: 500Mi
        ports:
        - containerPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: go-gen
spec:
  host: go-gen
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: v1
kind: Service
metadata:
  name: go-gen
  labels:
    app: go-gen
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: go-gen
